# birthday-congrats-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  main2.py  pyproject.toml  pyrightconfig.json
.github/workflows/: CI.yml  main.yml
code/: birthday_congrats_generator.py  birthday_congratulation.py  congratulation_interface.py
code/bot/: handler_router.py  main.py
code/bot/handlers/: birthday_congrats_handler.py  echo_handler.py  handler.py  shot_handler.py  start_command_handler.py
code/congrats_generator/: congrats_generator.py  generator_config.py
code/congrats_generator/builder/: birthday_congrats_builder.py  congrats_builder.py  shot_builder.py
code/congrats_generator/data/: birthday_congrats_data.py  congrats_data.py  default_congrats_data.py
code/congrats_generator/director/: birthday_congrats_builder.py  congrats_builder_director.py
code/congrats_generator/model/: congratulation.py
code/congrats_generator/type/: congratulation.py
data/: birthday_greetings_data.py
