[tool.poetry]
name = "birthdaycongratsgenerator"
version = "0.1.0"
description = ""
authors = ["Alexander Lubovsky <alexander.lubovsky@intexsoft.by>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.12"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
