[tool.poetry]
name = "birthday-congrats-generator"
version = "0.1.0"
description = ""
authors = ["Alexander Lubovsky <alexander.lubovsky@intexsoft.by>"]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^20"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
