[tool.poetry]
name = "congrats_bot"
version = "0.1.0"
description = ""
authors = ["Alexandr Lubovskii <xenx.efy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^20.0"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
